Fix default margin on error pages
This removes the scrollbar from them

--- a/pydis_site/static/css/error_pages.css
+++ b/pydis_site/static/css/error_pages.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100%;
+    margin: 0;
 }
 
 h1,
